REALLY fix z-index

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -1,3 +1,8 @@
+/*snipcart change*/
+.snipcart-modal__container {
+  z-index: 150;
+}
+
 /* Stygian Generator */
 .stygian-card {
   display: flex;
